--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
                 <div class="col-md-3 border-0" style="margin-top:50px">
                     <div class="card">
                         <div class="card-body">
-                            
+                            <img class="card-img-top" src="{{i[2]}}">
                             <p>{{i[0]}}</p>
                             <h4>{{i[1]}}</h4>
                         </div>
